2005-10-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Configure C compiler warning options (bug fix).

	* aclocal.m4 (MAN_AC_PROG_CC_OPTIONS_INITIALISE): Extraneous `)'
	deleted; replaced by `,'.

	* configure: Regenerated.

2005-10-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Configure C compiler warning options.

	* aclocal.m4 (MAN_AC_PROG_CC_OPTIONS_INITIALISE):...
	(MAN_AC_PROG_CC_OPTIONS, MAN_AC_PROG_CC_WARN): New macros.

	* configure.ac (CWARN, CWARNNP): Define, using macros
	MAN_AC_PROG_CC_OPTIONS_INITIALISE and MAN_AC_PROG_CC_OPTIONS.

	* configure: Regenerated.

	* src/Makefile.in (CWARN, CWARNNP): Let configure define them.
	* src/win32/Makefile.in (CWARN): Let configure define it.
	* man2html/Makefile.in (CWARN): Ditto.

	* tools/configure.ac (CWARN): Use MAN_AC_PROG_CC_WARN to define.
	* tools/configure: Regenerated.

	* tools/Makefile.in (CWARN): Let tools/configure define it.

2005-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* man/Makefile.in (MANPAGE_SED_TRANSFORM): Add `browser' and
	`htmlpager' substitutions.

2005-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Handle semicolon vs. colon selection for Win32 MANPATH.

	* aclocal.m4 (MAN_PATH_SEPARATOR): New macro; it defines the
	`@path_separator_char@' substitution value.

	* configure.ac: Use it.

	* configure: Regenerated.

	* src/apropos.sh (path_separator_char): New substitution.
	* src/Makefile.in (apropos, whatis): Use it.

2005-10-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* aclocal.m4 (MAN_PROG_AWK): New macro.
	* configure.ac (MAN_PROG_AWK): Use it...
	(AC_PROG_AWK): ...instead of this.

	* configure: Regenerated.

2005-10-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* src/man.c (make_roff_command): Add note about version specific line
	length adjustment in groff versions 1.18 through 1.19.1.

2005-10-06  Keith Marshall  <keithmarshall@users.sourceforge.net>
